--- a/package.json
+++ b/package.json
@@ -22,16 +22,17 @@
     "gsap": "^3.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "sass": "^1.89.2",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
+    "@types/css-modules": "^1.0.5",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "cross-env": "^10.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
+    "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
