--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "deploy": "gh-pages -d build",
     "prepare": "husky install",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
@@ -22,7 +23,7 @@
   "bugs": {
     "url": "https://github.com/muvahhid-001/timeline-events-module/issues"
   },
-  "homepage": "https://github.com/muvahhid-001/timeline-events-module#readme",
+  "homepage": "https://github.com/muvahhid-001/timeline-events-module",
   "dependencies": {
     "gsap": "^3.13.0",
     "react": "^19.1.1",
@@ -43,6 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^7.0.4",
     "lint-staged": "^16.1.2",
@@ -53,6 +55,7 @@
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "webpack": "^5.101.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   }
